...
            android:layout_height="@dimen/recipe_detail_image_height"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            tools:src="@drawable/brownie" />

        <TextView
            android:id="@+id/recipe_detail_name_tv"
            style="@style/TitlePrimary"
            android:layout_below="@id/recipe_detail_iv"
            android:layout_marginTop="@dimen/default_vertical_spacing"
            tools:text="Recipe name" />

        <LinearLayout
...
            android:layout_below="@id/recipe_ingredients_rv"
            android:paddingStart="@dimen/default_horizontal_spacing"
            android:text="@string/recipe_detail_steps_label" />

        <android.support.v7.widget.RecyclerView
            android:focusable="false"
            android:id="@+id/recipe_steps_rv"
            style="@style/DetailList"
            android:layout_below="@id/recipe_detail_steps_label_tv" />

    </RelativeLayout>
</ScrollView>
